Bug 202689 - "New contact" button doesn't open the "new contact" dialog (and there are two buttons)
Summary: "New contact" button doesn't open the "new contact" dialog (and there are two...
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 204098 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-05 21:12 UTC by FiNeX
Modified: 2009-08-17 10:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kontact screenshot (55.71 KB, image/png)
2009-08-05 21:15 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2009-08-05 21:12:26 UTC
Version:            (using Devel)
Installed from:    Compiled sources

On the new kaddressbook, the "new contact" button doesn't open the "new contact" dialog window.
Comment 1 FiNeX 2009-08-05 21:15:09 UTC
Created attachment 35875 [details]
kontact screenshot

"New contact" button which doesn't work.
Comment 2 FiNeX 2009-08-17 00:59:50 UTC
I've forgot to write that there are two "new contact" buttons instead of one like remembered on bug #204098
Comment 3 FiNeX 2009-08-17 01:00:35 UTC
*** Bug 204098 has been marked as a duplicate of this bug. ***
Comment 4 Tobias Koenig 2009-08-17 10:53:56 UTC
SVN commit 1012245 by tokoe:

Hide the 'New Contact...' and 'New Contact Group...' toolbar
buttons from the KAddressBook part and add Kontact actions instead.

Replace the disabled DBus interface call for creating new contacts
with native Akonadi calls

BUG: 202689


 M  +1 -1      CMakeLists.txt  
 M  +23 -4     kaddressbook_plugin.cpp  
 M  +2 -1      kaddressbook_plugin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1012245