Hide the 'New Contact...' and 'New Contact Group...' toolbar buttons from the KAddressBook part and add Kontact actions instead.

Replace the disabled DBus interface call for creating new contacts
with native Akonadi calls

BUG: 202689

svn path=/trunk/KDE/kdepim/kontact/plugins/; revision=1012245